Committing Task 1-10 with streams